<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/difficulty_level_easy"
            style="@style/DifficultyLevelStyle"
            android:checkable="true"
            android:gravity="center"
            android:text="@string/easy"
            app:chipMinTouchTargetSize="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/difficulty_level_medium"
            style="@style/DifficultyLevelStyle"
            android:checkable="true"
            android:gravity="center"
            android:text="@string/medium"
            app:chipMinTouchTargetSize="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/difficulty_level_hard"
            style="@style/DifficultyLevelStyle"
            android:checkable="true"
            android:gravity="center"
            android:text="@string/hard"
            app:chipMinTouchTargetSize="0dp" />

    </com.google.android.material.chip.ChipGroup>
</FrameLayout>