<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".ui.onboarding.view.OnboardingFragment">

    <TextView
        android:id="@+id/title"
        style="@style/Title.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:includeFontPadding="false"
        android:textColor="@color/shade_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome to Qurio" />

    <TextView
        android:id="@+id/description"
        style="@style/Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:includeFontPadding="false"
        android:paddingHorizontal="24dp"
        android:textAlignment="center"
        android:textColor="@color/shade_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Welcome to the world of Qurio, where questions spark curiosity and prizes await the smartest. Ready to begin the challenge?" />


    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/onboarding_image"
        android:scaleType="fitCenter"
        android:src="@drawable/onboarding1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toTopOf="@id/swipe_Card"/>


    <ImageView
        android:id="@+id/previous_page_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="152dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_left_icon"
        android:focusable="true"
        android:src="@drawable/arrow_left"
        app:layout_constraintEnd_toStartOf="@id/onboarding_image"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <ImageView
        android:id="@+id/next_page_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="152dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_right_icon"
        android:focusable="true"
        android:src="@drawable/arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toEndOf="@id/onboarding_image"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.cardview.widget.CardView
        android:id="@+id/swipe_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="100dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/swip_to_play_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/swipe_card_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/first_arrow"
                android:src="@drawable/arrow_up"
                app:tint="@color/shade_primary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/second_arrow"
                android:src="@drawable/arrow_up"
                app:tint="@color/shade_secondary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/third_arrow"
                android:src="@drawable/arrow_up"
                app:tint="@color/shade_tertiary" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/swipe_image"
                android:src="@drawable/swipe_image" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/swip_to_play_text"
        style="@style/Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:includeFontPadding="false"
        android:text="@string/swipe_up_to_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>