<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="148dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/no_connection"
            android:src="@drawable/ic_no_interent" />

        <TextView
            style="@style/Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/no_connection"
            android:textColor="@color/shade_primary" />

        <TextView
            style="@style/Body.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/oops_no_internet"
            android:textColor="@color/shade_secondary" />

        <Button
            android:id="@+id/buttonRetry"
            style="@style/Button.Primary"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:text="@string/retry"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>