<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/corners_cut_shape"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/card_background"
        android:scaleType="fitXY"
        android:src="@drawable/dialog_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/blue_linear_gradiant"
        android:rotation="180"
        android:translationX="5dp"
        app:layout_constraintDimensionRatio="56:1"
        app:layout_constraintEnd_toStartOf="@id/heptagon_shape"
        app:layout_constraintTop_toTopOf="@id/corners_cut_shape" />

    <View
        android:id="@+id/gradient_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/blue_linear_gradiant"
        android:translationX="-5dp"
        app:layout_constraintDimensionRatio="56:1"
        app:layout_constraintStart_toEndOf="@id/heptagon_shape"
        app:layout_constraintTop_toTopOf="@id/corners_cut_shape" />

    <ImageView
        android:id="@+id/heptagon_shape"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/card_background"
        android:src="@drawable/heptagon_shape"
        app:layout_constraintDimensionRatio="145:40"
        app:layout_constraintEnd_toEndOf="@id/corners_cut_shape"
        app:layout_constraintStart_toStartOf="@id/corners_cut_shape"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/character"
        style="@style/Title.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character"
        android:textColor="@color/on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/heptagon_shape"
        app:layout_constraintEnd_toEndOf="@id/heptagon_shape"
        app:layout_constraintStart_toStartOf="@id/heptagon_shape"
        app:layout_constraintTop_toTopOf="@id/heptagon_shape" />

    <ImageView
        android:id="@+id/close_shape"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:contentDescription="@string/card_background"
        android:src="@drawable/ic_close"
        app:layout_constraintDimensionRatio="22:26"
        app:layout_constraintEnd_toEndOf="@+id/corners_cut_shape"
        app:layout_constraintTop_toTopOf="@+id/corners_cut_shape" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/character_details_stroke"
        app:layout_constraintEnd_toEndOf="@+id/corners_cut_shape"
        app:layout_constraintStart_toStartOf="@+id/corners_cut_shape"
        app:layout_constraintTop_toBottomOf="@+id/heptagon_shape" />

    <TextView
        android:id="@+id/character_name"
        style="@style/Title.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/rika"
        android:textColor="@color/shade_primary"
        app:layout_constraintBottom_toTopOf="@+id/character_age"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/character_age"
        style="@style/Label.XSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:maxLines="1"
        android:text="@string/age_12_sunblooms"
        android:textColor="@color/shade_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/character_name"
        app:layout_constraintTop_toBottomOf="@+id/character_name" />

    <TextView
        android:id="@+id/character_description"
        style="@style/Body.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="106dp"
        android:text="@string/description"
        android:textColor="@color/shade_secondary"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="47dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/character_image"
        android:src="@drawable/character_test"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        style="@style/Label.Medium"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/secondary_button_background"
        android:text="@string/buy"
        android:textAllCaps="false"
        android:textColor="@drawable/primary_button_text_color"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/corners_cut_shape"
        app:layout_constraintEnd_toEndOf="@+id/character_description"
        app:layout_constraintStart_toStartOf="@+id/character_description"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>